--- a/style2.css
+++ b/style2.css
@@ -166,14 +166,14 @@ header nav ul li a:hover::after {
    Main Content
    ===================== */
 main {
-/*   display: flex;
+  display: flex;
   justify-content: center;
-  flex-direction: column; */
+  flex-direction: column;
   min-height: 100vh;
   color: var(--text-color);
-/*   padding-left: 75px; */
-  /* position: relative; */
-  /* overflow: hidden; */
+  padding-left: 75px;
+  position: relative;
+  overflow: hidden;
   background-image: url("images/table-tennis.jpeg");
   background-position: center;
   background-size: cover;
@@ -1018,7 +1018,6 @@ footer {
   .section1 .cards {
     grid-template-columns: 1fr;
     gap: 20px;
-    padding: 10px;
     margin: 0 auto;
     max-width: 400px;
     width: 92%;
@@ -1158,6 +1157,7 @@ footer {
 
   main {
     padding-top: 65px;
+    font-size: 10px;
   }
 
   header nav ul {
