--- a/style2.css
+++ b/style2.css
@@ -178,7 +178,7 @@ main {
   background-size: cover;
   background-attachment: fixed;
 /*   box-shadow: inset 700px 400px 400px black; */
-  box-shadow: inset 700px 400px 400px var(--dark-bg);
+  box-shadow: inset 700px 400px 400px var(rgba(203, 190, 233, 0.3));
 }
 
 main .nameAndSlogan {
