--- a/style2.css
+++ b/style2.css
@@ -746,11 +746,7 @@ footer {
 
   main {
     padding-top: 80px;
-    background: linear-gradient(
-      to bottom,
-      rgba(0, 0, 0, 1),
-      rgba(0, 0, 80, 1)
-    );
+    background: black;
   }
 
   .nameAndSlogan {
