--- a/style2.css
+++ b/style2.css
@@ -746,7 +746,11 @@ footer {
 
   main {
     padding-top: 80px;
-    background: black;
+    background: linear-gradient(
+      to bottom,
+      rgba(0, 0, 0, 0.95),
+      rgba(0, 0, 80, 0.95)
+    );
   }
 
   .nameAndSlogan {
